add option to use any stages action in the 'Action Completion' condition
fixes #141